tests/derive_ui/rename_all_wrong_casing.stderr
error: unsupported casing: `fail`
  --> $DIR/rename_all_wrong_casing.rs:12:37
   |
12 | #[clap(name = "basic", rename_all = "fail")]
   |                                     ^^^^^^
